--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     margin-top:100px;
     margin-right: 250px;
     margin-left: 250px;
+    margin-bottom:100px;
 }
 h1 {
     color: #f63;
